feat: changed and optimized a bit for a working verison of superset

--- a/docker/.env-non-dev
+++ b/docker/.env-non-dev
@@ -17,30 +17,45 @@
 COMPOSE_PROJECT_NAME=superset
 
 # database configurations (do not modify)
-DATABASE_DB=superset
-DATABASE_HOST=db
-DATABASE_PASSWORD=superset
+DATABASE_DB=production-superset
+DATABASE_HOST=global-brigad-data-warehouse-production.cuqcumefd4bd.eu-west-1.rds.amazonaws.com
+DATABASE_PASSWORD=qeH8hfniQ8F8JKFCYfFcLD3mhXQNe83xSQ3KN
 DATABASE_USER=superset
 
 # database engine specific environment variables
 # change the below if you prefer another database engine
 DATABASE_PORT=5432
 DATABASE_DIALECT=postgresql
-POSTGRES_DB=superset
+POSTGRES_DB=production-superset
 POSTGRES_USER=superset
-POSTGRES_PASSWORD=superset
+POSTGRES_PASSWORD=qeH8hfniQ8F8JKFCYfFcLD3mhXQNe83xSQ3KN
 #MYSQL_DATABASE=superset
 #MYSQL_USER=superset
 #MYSQL_PASSWORD=superset
 #MYSQL_RANDOM_ROOT_PASSWORD=yes
 
 # Add the mapped in /app/pythonpath_docker which allows devs to override stuff
+
 PYTHONPATH=/app/pythonpath:/app/docker/pythonpath_dev
-REDIS_HOST=redis
+
+# Redis Cluster config
+
+REDIS_HOST=clustercfg.irdu1-superset-global.ahk6pq.euw1.cache.amazonaws.com
 REDIS_PORT=6379
+REDIS_PASSWORD="dL7ozDLH5QeeYd6sfJe7DETB6Jy7HCmiSqi77"
+
+# Celery config (Broker on Redis / Backend on Postgres)
+
+CELERY_REDIS_BROKER_HOST=redis
+CELERY_BACKEND_DB="production-superset-celery-backend"
+CELERY_BROKER_DB=0
+
+# Config for the global async queries
+GLOBAL_ASYNC_QUERIES_REDIS_HOST=redis
+GLOBAL_ASYNC_QUERIES_REDIS_DB=1
 
 FLASK_ENV=production
 SUPERSET_ENV=production
-SUPERSET_LOAD_EXAMPLES=yes
+SUPERSET_LOAD_EXAMPLES=no
 CYPRESS_CONFIG=false
 SUPERSET_PORT=8088
