--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -14,32 +14,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-x-superset-image: &superset-image apache/superset:${TAG:-latest-dev}
-x-superset-depends-on: &superset-depends-on
-  - db
-  - redis
-x-superset-volumes: &superset-volumes
-  # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
+x-superset-image: &superset-image apache/superset:brigad
+x-superset-volumes:
+  &superset-volumes # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
   - ./docker:/app/docker
   - superset_home:/app/superset_home
 
 version: "3.7"
+networks:
+  superset-default:
+    name: superset_default
 services:
-  redis:
-    image: redis:latest
-    container_name: superset_cache
-    restart: unless-stopped
-    volumes:
-      - redis:/data
-
-  db:
-    env_file: docker/.env-non-dev
-    image: postgres:10
-    container_name: superset_db
-    restart: unless-stopped
-    volumes:
-      - db_home:/var/lib/postgresql/data
-
   superset:
     env_file: docker/.env-non-dev
     image: *superset-image
@@ -49,48 +34,110 @@ services:
     restart: unless-stopped
     ports:
       - 8088:8088
-    depends_on: *superset-depends-on
     volumes: *superset-volumes
-
-  superset-init:
-    image: *superset-image
-    container_name: superset_init
-    command: ["/app/docker/docker-init.sh"]
-    env_file: docker/.env-non-dev
-    depends_on: *superset-depends-on
-    user: "root"
-    volumes: *superset-volumes
+    networks:
+      superset-default: null
     healthcheck:
-      disable: true
+      test: curl --fail --silent "http://superset:8080/health" &> /dev/null || exit 1
+      interval: 10s
+      timeout: 10s
+      retries: 3
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.superset_app.rule=Host(`superset.brigad.tools`)"
+      - "traefik.http.routers.superset_app.entrypoints=web"
 
-  superset-worker:
+  # superset-init:
+  #   image: *superset-image
+  #   container_name: superset_init
+  #   command: ["/app/docker/docker-init.sh"]
+  #   env_file: docker/.env-non-dev
+  #   user: "root"
+  #   volumes: *superset-volumes
+  #   healthcheck:
+  #     disable: true
+
+  superset-worker-1:
     image: *superset-image
-    container_name: superset_worker
+    container_name: superset_worker_1
     command: ["/app/docker/docker-bootstrap.sh", "worker"]
     env_file: docker/.env-non-dev
     restart: unless-stopped
-    depends_on: *superset-depends-on
     user: "root"
     volumes: *superset-volumes
+    networks:
+      superset-default: null
+    depends_on:
+      - redis
     healthcheck:
-      test: ["CMD-SHELL", "celery inspect ping -A superset.tasks.celery_app:app -d celery@$$HOSTNAME"]
-
+      test: celery -A superset.tasks.celery_app:app inspect -d celery@$$HOSTNAME ping
+      interval: 15s
+      timeout: 20s
+      start_period: 10s
+      retries: 3
+  
+  superset-worker-2:
+    image: *superset-image
+    container_name: superset_worker_2
+    command: ["/app/docker/docker-bootstrap.sh", "worker"]
+    env_file: docker/.env-non-dev
+    restart: unless-stopped
+    user: "root"
+    volumes: *superset-volumes
+    networks:
+      superset-default: null
+    depends_on:
+      - redis
+    healthcheck:
+      test: celery -A superset.tasks.celery_app:app inspect -d celery@$$HOSTNAME ping
+      interval: 15s
+      timeout: 20s
+      start_period: 10s
+      retries: 3
+  
+  superset-worker-3:
+    image: *superset-image
+    container_name: superset_worker_3
+    command: ["/app/docker/docker-bootstrap.sh", "worker"]
+    env_file: docker/.env-non-dev
+    restart: unless-stopped
+    user: "root"
+    volumes: *superset-volumes
+    networks:
+      superset-default: null
+    depends_on:
+      - redis
+    healthcheck:
+      test: celery -A superset.tasks.celery_app:app inspect -d celery@$$HOSTNAME ping
+      interval: 15s
+      timeout: 20s
+      start_period: 10s
+      retries: 3
+  
   superset-worker-beat:
     image: *superset-image
     container_name: superset_worker_beat
     command: ["/app/docker/docker-bootstrap.sh", "beat"]
     env_file: docker/.env-non-dev
     restart: unless-stopped
-    depends_on: *superset-depends-on
     user: "root"
     volumes: *superset-volumes
+    networks:
+      superset-default: null
     healthcheck:
       disable: true
+  
+  redis:
+    image: redis:latest
+    container_name: superset_redis
+    restart: unless-stopped
+    networks:
+      superset-default: null
+    volumes:
+      - redis:/data
 
 volumes:
   superset_home:
-    external: false
-  db_home:
     external: false
   redis:
     external: false
